syntax = "proto3";

package AutoFuzz;

message FuzzArgsProfile {
  bytes fuzzvar40 = 1;
  sint32 fuzzvar41 = 2;
}

